src/test/ui/const-generics/cannot-infer-const-args.stderr
warning: the feature `const_generics` is incomplete and may cause the compiler to crash
  --> $DIR/cannot-infer-const-args.rs:1:12
   |
LL | #![feature(const_generics)]
   |            ^^^^^^^^^^^^^^

error[E0282]: type annotations needed
  --> $DIR/cannot-infer-const-args.rs:9:5
   |
LL |     foo();
   |     ^^^ cannot infer type for `fn() -> usize {foo::<_: usize>}`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0282`.
